TODO_LIST.txt
- Faire swap()
- Vérifier le binz avec value_compare
- Faire le dernier constructeur de map
- Mettre au propre
- Tout tester
                                                                 ^
1 error generated.
make[1]: *** [stack_exec] Error 1
make: *** [stack] Error 2
➜  ft_container git:(master) make map

                                                ~~~~^~~~~~~
In file included from tester_map.cpp:2:
./Map.hpp:97:13: error: no matching constructor for initialization of 'std::out_of_range'
                                        throw (std::out_of_range());
                                               ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:145:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const string& __s) : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:146:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const char* __s)   : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:141:29: note: candidate constructor
      (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class _LIBCPP_EXCEPTION_ABI out_of_range
                            ^
In file included from tester_map.cpp:2:
./Map.hpp:105:13: error: no matching constructor for initialization of 'std::out_of_range'
                                        throw (std::out_of_range());
                                               ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:145:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const string& __s) : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:146:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const char* __s)   : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:141:29: note: candidate constructor
      (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class _LIBCPP_EXCEPTION_ABI out_of_range
                            ^
3 errors generated.
make[1]: *** [map_exec] Error 1
make: *** [map] Error 2
